# MesoEngine

./: .gitignore  CMakeLists.txt  README.md
Runtimes/Helper/: ColorHelper.h  Comparator.h  CullingHelper.h  FileHelper.h  GeneratorHelper.h  Timer.h  TimerSet.h  VoxelMathHelper.h
Runtimes/Instance/: VoxelCamera.cpp  VoxelCamera.h  VoxelWindowsInstance.cpp  VoxelWindowsInstance.h
Runtimes/Shader/: GPUStructures.h  ShaderBase.h  ShaderFullScreen.h  ShaderShadertoy.h  ShaderWireFrame.h
Runtimes/Shape/: Cube.h  Octahedron.h  Shape.h  TriplePlanarCube.h
Runtimes/Thread/: AtomicVector.h  DoubleBufferQueue.h  MemoryPool.h  ThreadPool.h  ThreadSafeMap.h  ThreadSafeMemoryPool.h  ThreadSafeQueue.h
Runtimes/Voxel/: VoxelSceneConfig.h  VoxelStructure.h
Runtimes/Voxel/Block/: Block.h  BlockPool.h
Runtimes/Voxel/Chunk/: Chunk.h  ChunkManager.h  ChunkManagerHelper.h  ChunkPool.h
Runtimes/Voxel/Occupancy/: BinaryOccupancyVolume.h
Runtimes/Voxel/Spatial/: NearestMap.h
Samples/: CMakeLists.txt  DefaultInstance.cpp  SimpleShadertoy.cpp  SimpleVoxel.cpp  TestVoxel.cpp
